Fixed Padding on Mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,7 +23,6 @@
 .appgrid {
   grid-template-columns: auto 1fr;
   height: 100vh;
-  padding-top: 12px;
   overflow: hidden;
   @media screen and (max-width: 640px) {
     grid-template-columns: 1fr;
